--- a/ReadMe.htm
+++ b/ReadMe.htm
@@ -29,7 +29,7 @@
       Version
     </h2>
     <p>
-      1.2.4.3
+      2.3.4.4
     </p>
     <h2>
       Description
@@ -53,7 +53,8 @@
       Features
     </h2>
     <ul>
-      <li>Captures plain text preserving newlines with or without formatting from clipboard.</li>
+      <li>Captures text preserving newlines from clipboard.</li>
+      <li>Choose text capturing with or without formatting. </li>
       <li>
         Handles clipboard events (dispatched by the copy menu item from the edit
         menu or context menu and by pressing the CTRL+C keyboard shortcut) throughout all applications.
@@ -64,7 +65,7 @@
       Requirements
     </h2>
     <ul>
-      <li>Microsoft .NET Framework 2.0 or higher for Microsoft Windows </li>
+      <li>Microsoft .NET Framework 3.5 or higher for Microsoft Windows </li>
       <li>Runs with Windows 2000, Windows XP, Windows 2003, Windows Vista and Windows 7</li>
     </ul>
     <h2>
@@ -112,11 +113,14 @@
     <!-- Major.Minor.Bugfix.Revision -->
     <ul>
       <li>
-        <b>1.2.4.3</b>
+        <b>2.3.4.4</b>
         <br/>
         <ul>
-          <li>Changed some captions and labels in the GUI.</li>
+        	<li>Added german language support.</li>
+        	<li>Changed the runtime environment to .NET Framework 3.5 now.</li>
           <li>Changed behaviour on processing the notification event when a message will be received from the clipboard because its content changed.</li>
+          <li>Changed some captions and labels in the GUI.</li>
+          <li>Fixed some misunderstandings in the features description.</li>
         </ul>
       </li>
       <li>
