--- a/ReadMe.htm
+++ b/ReadMe.htm
@@ -113,13 +113,14 @@
     <!-- Major.Minor.Bugfix.Revision -->
     <ul>
       <li>
-        <b>2.3.4.4</b>
+        <b>2.3.5.4</b>
         <br/>
         <ul>
         	<li>Added german language support.</li>
         	<li>Changed the runtime environment to .NET Framework 3.5 now.</li>
           <li>Changed behaviour on processing the notification event when a message will be received from the clipboard because its content changed.</li>
           <li>Changed some captions and labels in the GUI.</li>
+			<li>Fixed tabulators appearing as empty squares in history elements.</li>
           <li>Fixed some misunderstandings in the features description.</li>
         </ul>
       </li>
