--- a/ReadMe.htm
+++ b/ReadMe.htm
@@ -29,7 +29,7 @@
       Version
     </h2>
     <p>
-      2.3.4.4
+      2.3.5.4
     </p>
     <h2>
       Description
@@ -66,7 +66,7 @@
     </h2>
     <ul>
       <li>Microsoft .NET Framework 3.5 or higher for Microsoft Windows </li>
-      <li>Runs with Windows 2000, Windows XP, Windows 2003, Windows Vista and Windows 7</li>
+      <li>Runs with Windows XP, Windows Vista and Windows 7</li>
     </ul>
     <h2>
       File listing
@@ -149,10 +149,10 @@
       Bugs or known issues
     </h2>
     <ul>
-      <li>
-        It is possible to enter wrong values into the numeric fields but they will be evaluated
-        to the next correct value.
-      </li>
+      <li>If Wlipper stops capturing the clipboard invoke the <em>Re-Register for clipboard listening</em> functionality from the context menu.</li>
+      <li>Wlipper is possible to hung up and crash when using different office suite applications (e.g. Microsoft Office, OpenOffice.org) while Wlipper is running. The system itself will not be affected.</li>
+      <li>If the tooltip of a history entry is too big it flickers.</li>
+      <li>It is possible to enter wrong values into the numeric fields however they will be evaluated to the next correct value.</li>
     </ul>
     <p>
       No more bugs or issues known so far. Anyway please report all bugs you may encounter.
