Added left mouse click to notify icon for context menu AND more little changes

--- a/ReadMe.htm
+++ b/ReadMe.htm
@@ -1,6 +1,10 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<?xml version="1.0" encoding="utf-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
+    
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" /> <!-- The MIME type application/xhtml+xml fails for IE6 -->
+    
     <title>Wlipper's ReadMe</title>
     <style type="text/css">
       *
@@ -29,7 +33,7 @@
       Version
     </h2>
     <p>
-      2.3.5.4
+      2.4.5.5
     </p>
     <h2>
       Description
@@ -65,7 +69,8 @@
       Requirements
     </h2>
     <ul>
-      <li>Microsoft .NET Framework 3.5 or higher for Microsoft Windows </li>
+      <li>Microsoft .NET Framework 3.5 for Microsoft Windows </li>
+      <li>Computer mouse with at least one button</li>
       <li>Runs with Windows XP, Windows Vista and Windows 7</li>
     </ul>
     <h2>
@@ -79,6 +84,11 @@
       <li>
         <b>Wlipper.exe</b><br />
         The program executable.
+      </li>
+      <li>
+        <strong>de\Wlipper.resources.dll</strong>
+        <br />
+        Resources for german language.
       </li>
       <li>
         <b>ReadMe.htm</b><br />
@@ -112,9 +122,15 @@
     </h2>
     <!-- Major.Minor.Bugfix.Revision -->
     <ul>
+        <li>
+            <b>2.4.5.5</b>
+            <ul>
+                <li>Added left mouse button click on the notify icon for the context menu</li>
+                <li>Changed some captions and labels in the GUI.</li>
+            </ul>
+        </li>
       <li>
         <b>2.3.5.4</b>
-        <br/>
         <ul>
         	<li>Added german language support.</li>
         	<li>Changed the runtime environment to .NET Framework 3.5 now.</li>
@@ -126,7 +142,6 @@
       </li>
       <li>
         <b>1.2.3.2</b>
-        <br />
         <ul>
           <li>Added new feature to choose whether text formatting has to be preserved or not.</li>
           <li>Added new feature to re-register Wlipper for listening the clipboard. Use this if Wlipper stops capturing the clipboard for changes. This way you do not have to restart the application if so.</li>
@@ -149,7 +164,7 @@
       Bugs or known issues
     </h2>
     <ul>
-      <li>If Wlipper stops capturing the clipboard invoke the <em>Re-Register for clipboard listening</em> functionality from the context menu.</li>
+      <li>If Wlipper stops capturing the clipboard invoke the <em>Retrieve clipboard</em> functionality from the context menu.</li>
       <li>Wlipper is possible to hung up and crash when using different office suite applications (e.g. Microsoft Office, OpenOffice.org) while Wlipper is running. The system itself will not be affected.</li>
       <li>If the tooltip of a history entry is too big it flickers.</li>
       <li>It is possible to enter wrong values into the numeric fields however they will be evaluated to the next correct value.</li>
@@ -178,7 +193,7 @@ rixLcmF4vHlzh/vuTGQmiIjACQbY8Icv3GfmjQolYQ1TXKGXmVW+hxEmWM3Mf8IE+2jjDNe4QL98
 PygbRhERQ7xn5hO2sYLXUtZDRNxm5hQfpWRjtCsZ9UAfWZ4dPBboZObcYjzjBzuZOUOrWFJYR9Yv
 BWYR0V5SvIsWXiKig+/AEJuZeRoRA2zhE3s4wjgzjyNihLemres4xx0ucdi0ddHgujWXuhqDiyWr
 Uf1prrEav/Qle7N8JPReAAAAAElFTkSuQmCC
-" border="0" /> 2008-2009 by <i>Markus Kwaśnicki</i>
+" border="0" /> 2008-2010 by <i>Markus Kwaśnicki</i>
       </a>
     </p>
   </body>
