--- a/ReadMe.htm
+++ b/ReadMe.htm
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
@@ -33,7 +33,7 @@
       Version
     </h2>
     <p>
-      2.4.5.5
+      2.4.6.5
     </p>
     <h2>
       Description
@@ -123,9 +123,10 @@
     <!-- Major.Minor.Bugfix.Revision -->
     <ul>
         <li>
-            <b>2.4.5.5</b>
+            <b>2.4.6.5</b>
             <ul>
-                <li>Added left mouse button click on the notify icon for the context menu</li>
+                <li>Added left mouse button click on the notify icon for the context menu.</li>
+                <li>Added single instance behaviour to the application.</li>
                 <li>Changed some captions and labels in the GUI.</li>
             </ul>
         </li>
