Fixed capturing the same clipboard content several time AND more little changes

--- a/ReadMe.htm
+++ b/ReadMe.htm
@@ -33,7 +33,7 @@
       Version
     </h2>
     <p>
-      2.4.6.5
+      2.4.7.5
     </p>
     <h2>
       Description
@@ -123,11 +123,12 @@
     <!-- Major.Minor.Bugfix.Revision -->
     <ul>
         <li>
-            <b>2.4.6.5</b>
+            <b>2.4.7.5</b>
             <ul>
                 <li>Added left mouse button click on the notify icon for the context menu.</li>
                 <li>Added single instance behaviour to the application.</li>
                 <li>Changed some captions and labels in the GUI.</li>
+                <li>Fixed capturing the same clipboard content several time.</li>
             </ul>
         </li>
       <li>
