--- a/ReadMe.htm
+++ b/ReadMe.htm
@@ -33,13 +33,13 @@
       Version
     </h2>
     <p>
-      2.4.7.5
+      2.5.7.5
     </p>
     <h2>
       Description
     </h2>
     <p>
-      <a href="http://wlipper.kwasniccy.eu/">
+      <a href="http://wlipper.sourceforge.net/">
         <b>Wlipper</b>
       </a> is a <i>
         Windows Clipboard
@@ -123,10 +123,11 @@
     <!-- Major.Minor.Bugfix.Revision -->
     <ul>
         <li>
-            <b>2.4.7.5</b>
+            <b>2.5.7.5</b>
             <ul>
                 <li>Added left mouse button click on the notify icon for the context menu.</li>
                 <li>Added single instance behaviour to the application.</li>
+                <li>Added functionality to check for updates.</li>
                 <li>Changed some captions and labels in the GUI.</li>
                 <li>Fixed capturing the same clipboard content several time.</li>
             </ul>
