--- a/ReadMe.htm
+++ b/ReadMe.htm
@@ -7,12 +7,9 @@
     
     <title>Wlipper's ReadMe</title>
     <style type="text/css">
-      *
-      {
-      max-width: 640px;
-      }
       body
       {
+      max-width: 640px;
       font-family: Sans-Serif;
       font-size: 16px;
       text-align: justify;
@@ -33,7 +30,7 @@
       Version
     </h2>
     <p>
-      2.5.7.5
+      3.5.7.5
     </p>
     <h2>
       Description
@@ -51,7 +48,7 @@
         GNOME's <i>Glipper</i>
       </a>
       respectively. Any text copied to the clipboard will be kept in memory
-      for later use. It works with all applications which provide clipboard functionality.
+      for later use during the session. It works with all applications which provide clipboard functionality.
     </p>
     <h2>
       Features
@@ -71,7 +68,7 @@
     <ul>
       <li>Microsoft .NET Framework 3.5 for Microsoft Windows </li>
       <li>Computer mouse with at least one button</li>
-      <li>Runs with Windows XP, Windows Vista and Windows 7</li>
+      <li>Runs with Windows XP, Windows 2003, Windows Vista and Windows 7 so far</li>
     </ul>
     <h2>
       File listing
@@ -91,6 +88,11 @@
         Resources for german language.
       </li>
       <li>
+        <strong>pl\Wlipper.resources.dll</strong>
+        <br />
+        Resources for polish language.
+      </li>
+      <li>
         <b>ReadMe.htm</b><br />
         This documentation file.
       </li>
@@ -106,6 +108,8 @@
     </h3>
     <p>
       No installation is needed. Just extract the whole package anywhere on your computer.
+      <br />
+      <strong>Tip:</strong> Add a shortcut to <em>Wlipper.exe</em> to your startup folder so it is available to you in every login session.
     </p>
     <h3>
       Uninstallation
@@ -115,7 +119,7 @@
       listed above) from your computer. Additionally delete the <code>
         "%USERPROFILE%\Local
         Settings\Application Data\Wlipper"
-      </code> preferences folder.
+      </code> preferences folder. Also delete the startup shortcut if any.
     </p>
     <h2>
       Version history
@@ -123,8 +127,9 @@
     <!-- Major.Minor.Bugfix.Revision -->
     <ul>
         <li>
-            <b>2.5.7.5</b>
+            <b>3.5.7.5</b>
             <ul>
+            	<li>Added polish language support.</li>
                 <li>Added left mouse button click on the notify icon for the context menu.</li>
                 <li>Added single instance behaviour to the application.</li>
                 <li>Added functionality to check for updates.</li>
@@ -173,8 +178,7 @@
       <li>It is possible to enter wrong values into the numeric fields however they will be evaluated to the next correct value.</li>
     </ul>
     <p>
-      No more bugs or issues known so far. Anyway please report all bugs you may encounter.
-      Thank you.
+      No more bugs or issues known so far. Anyway please report all bugs you may encounter. Thank you.
     </p>
     <h2>
       Feedback
