Raised minor version +1

--- a/ReadMe.htm
+++ b/ReadMe.htm
@@ -30,7 +30,7 @@
       Version
     </h2>
     <p>
-      3.5.8.5
+      3.6.8.5
     </p>
     <h2>
       Description
@@ -126,6 +126,12 @@
     </h2>
     <!-- Major.Minor.Bugfix.Revision -->
     <ul>
+        <li>
+            <b>3.6.8.5</b>
+            <ul>
+                <li>Added spanish language support.</li>
+            </ul>
+        </li>
         <li>
             <b>3.5.8.5</b>
             <ul>
