--- a/ReadMe.htm
+++ b/ReadMe.htm
@@ -93,6 +93,11 @@
         Resources for polish language.
       </li>
       <li>
+        <strong>es\Wlipper.resources.dll</strong>
+        <br />
+        Resources for spanish language.
+      </li>
+      <li>
         <b>ReadMe.htm</b><br />
         This documentation file.
       </li>
@@ -191,6 +196,12 @@
     </ul>
     <p>
       No more bugs or issues known so far. Anyway please report all bugs you may encounter. Thank you.
+    </p>
+    <h2>Translation</h2>
+    <p>
+        If you would like to use Wlipper in your native language, please feel also free to send me a translation. 
+        - 
+        Special thanks to ALL THE Wlipper users who already contributed with translations.
     </p>
     <h2>
       Feedback
