--- a/ReadMe.htm
+++ b/ReadMe.htm
@@ -30,23 +30,23 @@
       Version
     </h2>
     <p>
-      3.6.8.5
+      3.6.9.5
     </p>
     <h2>
       Description
     </h2>
     <p>
-      <a href="http://wlipper.sourceforge.net/">
+      <a href="http://wlipper.kwasniccy.eu/">
         <b>Wlipper</b>
       </a> is a <i>
-        Windows Clipboard
-        Utility Software
+        Windows Clipboard History Utility Software
       </i> equivalent to <a href="http://en.wikipedia.org/wiki/Klipper">
         KDE's
         <i>Klipper</i>
-      </a> or <a href="http://en.wikipedia.org/wiki/Glipper">
+      </a>, <a href="http://en.wikipedia.org/wiki/Glipper">
         GNOME's <i>Glipper</i>
       </a>
+      or <a href="http://jumpcut.sourceforge.net/">Jumpcut for Mac</a> 
       respectively. Any text copied to the clipboard will be kept in memory
       for later use during the session. It works with all applications which provide clipboard functionality.
     </p>
@@ -131,6 +131,12 @@
     </h2>
     <!-- Major.Minor.Bugfix.Revision -->
     <ul>
+        <li>
+            <b>3.6.9.5</b>
+            <ul>
+                <li>Fixed a bug with the check for updates mechanism.</li>
+            </ul>
+        </li>
         <li>
             <b>3.6.8.5</b>
             <ul>
