HTML copied from SourceForge

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-My GitHub Page
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Wlipper</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8">
+		<meta http-equiv="refresh" content="12; URL=https://github.com/deliveryboy/Wlipper">
+	</head>
+	<body>
+		<p>
+			Wlipper won't be maintained at SourceForge anymore.
+			<br>
+			You can find Wlipper's new development home at GitHub: <a href="https://github.com/deliveryboy/Wlipper">https://github.com/deliveryboy/Wlipper</a>
+		</p>
+		<p>
+			The first release version at GitHub provides spanish language support.
+			<br>
+			Download release version 3.6.8.5 @ <a href="https://github.com/deliveryboy/Wlipper/downloads">https://github.com/deliveryboy/Wlipper/downloads</a>
+		</p>
+		<p>
+			You will be redirected automatically in few moments...
+		</p>
+	</body>
+</html>
