--- a/ReadMe.htm
+++ b/ReadMe.htm
@@ -30,7 +30,7 @@
       Version
     </h2>
     <p>
-      3.6.9.5
+      3.6.10.6
     </p>
     <h2>
       Description
@@ -132,6 +132,13 @@
     <!-- Major.Minor.Bugfix.Revision -->
     <ul>
         <li>
+            <b>3.6.10.6</b>
+            <ul>
+                <li>Changed behaviour of the update mechanism.</li>
+                <li>Changed update URL to the projects new hosting home.</li>
+            </ul>
+        </li>
+        <li>
             <b>3.6.9.5</b>
             <ul>
                 <li>Fixed a bug with the check for updates mechanism.</li>
@@ -190,6 +197,11 @@
         <b>1.0.0.0</b><br />
         Just a prototype for testing.
       </li>
+    </ul>
+    <h2>Roadmap</h2>
+    <p>There are some features in the pipeline that are not yet implemented:</p>
+    <ul>
+        <li>Serializing the clipboard history to make it persistent between program sessions.</li>
     </ul>
     <h2>
       Bugs or known issues
