--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 			You can find Wlipper's new development home at GitHub: <a href="https://github.com/deliveryboy/Wlipper">https://github.com/deliveryboy/Wlipper</a>
 		</p>
 		<p>
-			The first release version at GitHub provides spanish language support.
+			Further version releases will follow at GitHub.
 			<br>
-			Download release version 3.6.8.5 @ <a href="https://github.com/deliveryboy/Wlipper/downloads">https://github.com/deliveryboy/Wlipper/downloads</a>
+			Download the current release version @ <a href="https://github.com/deliveryboy/Wlipper/downloads">https://github.com/deliveryboy/Wlipper/downloads</a>
 		</p>
 		<p>
 			You will be redirected automatically in few moments...
