Fixed a bug of the update mechanism

--- a/ReadMe.htm
+++ b/ReadMe.htm
@@ -30,7 +30,7 @@
       Version
     </h2>
     <p>
-      3.6.10.6
+      3.6.11.6
     </p>
     <h2>
       Description
@@ -131,6 +131,12 @@
     </h2>
     <!-- Major.Minor.Bugfix.Revision -->
     <ul>
+        <li>
+            <b>3.6.11.6</b>
+            <ul>
+                <li>Fixed a bug of the update mechanism.</li>
+            </ul>
+        </li>
         <li>
             <b>3.6.10.6</b>
             <ul>
